feat(AREA-192): add oauth discord

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -25,6 +25,9 @@ GITHUB_CLIENT_SECRET=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
 RMQ_WREA_QUEUE=
 RMQ_USER=
 RMQ_PASS=
