--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -2,4 +2,5 @@ VITE_API_URL=
 VITE_GOOGLE_CLIENT_ID=
 VITE_ATLASSIAN_CLIENT_ID=
 VITE_GITHUB_CLIENT_ID=
-VITE_SPOTIFY_CLIENT_ID
+VITE_SPOTIFY_CLIENT_ID=
+VITE_DISCORD_CLIENT_ID=
