--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -31,6 +31,7 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
+    "liquidjs": "^10.18.0",
     "make-error": "^1.3.6",
     "tsconfig-paths": "^4.2.0",
     "undici-types": "^6.19.8",
