--- a/apps/mobileExpo/package.json
+++ b/apps/mobileExpo/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
     "eas": "^0.1.0",
     "eslint": "^9.11.1",
@@ -42,6 +44,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-native-svg": "15.2.0"
     "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
