--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           prettier_options: --write .
           prettier_plugins: prettier-plugin-svelte
-          only_changed: true
+          file_pattern: .
