--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -33,3 +33,4 @@ jobs:
           prettier_options: --write .
           prettier_plugins: prettier-plugin-svelte
           file_pattern: apps
+          commit_message: "style(apps): applied auto-prettify on apps/"
