hotfix(AREA-223): services json weird writing causing compilation errors (#126)
Co-authored-by: ThibaultLonguepee <ThibaultLonguepee@users.noreply.github.com>

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,8 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist",
-    "types": ["node", "jest"],
-    "resolveJsonModule": true
+    "types": ["node", "jest"]
   },
 
   "include": ["src/**/*.js", "src/**/*.ts"],
