--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -24,9 +24,11 @@
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
