--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/node": "^22.7.2",
-    "@types/nodemailer": "^6.4.16",
     "mongodb": "^6.9.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -32,8 +31,8 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
+    "liquidjs": "^10.18.0",
     "make-error": "^1.3.6",
-    "nodemailer": "^6.9.15",
     "tsconfig-paths": "^4.2.0",
     "undici-types": "^6.19.8",
     "v8-compile-cache-lib": "^3.0.1",
