--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -27,6 +27,7 @@
     "acorn-walk": "^8.3.4",
     "amqplib": "^0.10.4",
     "arg": "^4.1.3",
+    "axios": "^1.7.7",
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
     "discord.js": "^14.16.3",
