--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/spotify-web-api-node": "^5.0.11",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.4",
     "amqplib": "^0.10.4",
@@ -34,6 +35,7 @@
     "googleapis": "^144.0.0",
     "liquidjs": "^10.18.0",
     "make-error": "^1.3.6",
+    "spotify-web-api-node": "^5.0.2",
     "tsconfig-paths": "^4.2.0",
     "undici-types": "^6.19.8",
     "v8-compile-cache-lib": "^3.0.1",
