--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/swagger": "^7.4.2",
+    "@types/spotify-web-api-node": "^5.0.11",
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
@@ -25,7 +26,8 @@
     "googleapis": "^144.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.16",
