feat(frontend): all modules, stores, and utils tested

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"test": "vitest"
+		"test": "vitest",
+		"test:coverage": "vitest run --coverage",
+		"test:ui": "vitest --ui",
+		"test:ci": "vitest run --coverage --bail=1"
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^4.0.2",
