--- a/apps/mobileExpo/package.json
+++ b/apps/mobileExpo/package.json
@@ -7,13 +7,12 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.8.1",
@@ -23,6 +22,7 @@
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-auth-session": "~5.5.2",
+    "expo-checkbox": "~3.0.0",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
@@ -33,26 +33,32 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jest-expo": "~51.0.4",
     "lucide-react-native": "^0.453.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
     "react-native-svg": "15.2.0",
-    "expo-checkbox": "~3.0.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.8.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
   "private": true
