--- a/apps/mobileExpo/Dockerfile
+++ b/apps/mobileExpo/Dockerfile
@@ -1,24 +1,16 @@
-FROM node:16.17.1-alpine3.15
+FROM saschpe/android-ndk:35-jdk22.0.2_9-ndk27.0.12077973-cmake3.22.1
+
+RUN export DEBIAN_FRONTEND=noninteractive \
+  && apt-get update -qq \
+  && apt-get upgrade -y -qq \
+  && apt-get install -y -qq \
+    curl \
+    unzip \
+    nodejs \
+    npm
 
 WORKDIR /app
 
-COPY apps/mobileExpo .
+COPY . .
 
-ARG SKIP_MOBILE_COMPILATION=0
-
-RUN if [ "$SKIP_MOBILE_COMPILATION" = "0" ]; then \
-      npm install -g expo-cli eas-cli && \
-      npm i && \
-      apk add git jq && \
-      git init; \
-    else \
-      echo "Skipping installation and initialization steps"; \
-    fi
-
-RUN sh ./build.sh $SKIP_MOBILE_COMPILATION
-
-RUN mkdir -p /shared
-
-RUN mv client.apk /shared
-
-CMD echo "APK is ready"
+CMD [ "./build.sh" ]
