fix(mobile): dockerfile

--- a/apps/mobileExpo/Dockerfile
+++ b/apps/mobileExpo/Dockerfile
@@ -1,6 +1,9 @@
 FROM saschpe/android-ndk:35-jdk22.0.2_9-ndk27.0.12077973-cmake3.22.1
 
-RUN export DEBIAN_FRONTEND=noninteractive \
+ARG SKIP_MOBILE_COMPILATION=0
+
+RUN if [ "$SKIP_MOBILE_COMPILATION" = "0" ]; then \
+  export DEBIAN_FRONTEND=noninteractive \
   && apt-get update -qq \
   && apt-get upgrade -y -qq \
   && apt-get install -y -qq \
@@ -13,4 +16,4 @@ WORKDIR /app
 
 COPY . .
 
-CMD [ "./build.sh" ]
+RUN sh ./build.sh $SKIP_MOBILE_COMPILATION
