--- a/apps/mobileExpo/package.json
+++ b/apps/mobileExpo/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:update": "jest -u",
+    "test:debug": "jest --debug",
+    "test:clear": "jest --clearCache"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
@@ -33,7 +36,6 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "jest-expo": "~51.0.4",
     "lucide-react-native": "^0.453.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -55,7 +57,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "^51.0.3",
     "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.2.5",
