--- a/apps/task_manager/package.json
+++ b/apps/task_manager/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "func-tests": "MONGODB_DB_NAME=dev_testing ts-node tests/funcTestingSetup.ts; MONGODB_DB_NAME=dev_testing RMQ_QUEUE=queue_testing ts-node src/index.ts"
+    "mocking-setup": "MONGODB_DB_NAME=dev_testing ts-node tests/mockingSetup.ts; MONGODB_DB_NAME=dev_testing RMQ_QUEUE=queue_testing ts-node src/index.ts",
+    "func-tests": "ts-node tests/funcTesting.ts"
   },
   "keywords": [],
   "author": "",
