--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^7.4.2",
     "bcryptjs": "^2.4.3",
     "express-session": "^1.18.0",
+    "jest-mock": "^29.7.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "passport": "^0.7.0",
@@ -39,7 +40,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.4.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
