--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -73,7 +73,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(controller|service).(t|j)s",
+      "!src/auth/*"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
