--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
   },
 
   "include": ["src/**/*.js", "src/**/*.ts"],
