--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -73,8 +73,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(controller|service).(t|j)s",
-      "!src/auth/*"
+      "**/*.(controller|service|guard).(t|j)s",
+      "!auth/**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
