--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,4 @@
 services:
-  # database:
-
   queue:
     build:
       context: ./apps/queue
@@ -19,6 +17,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - area-network
 
   manager:
     build:
@@ -31,7 +31,8 @@ services:
       queue:
         condition: service_healthy
     restart: always
-    network_mode: "host"      
+    networks:
+      - area-network
 
   worker:
     build:
@@ -43,7 +44,8 @@ services:
     depends_on:
       queue:
         condition: service_healthy
-    network_mode: "host"
+    networks:
+      - area-network
 
   server:
     build:
@@ -59,7 +61,8 @@ services:
         condition: service_started
       worker:
         condition: service_started
-    network_mode: "host"
+    networks:
+      - area-network
     ports:
       - "8080:8080"
 
@@ -74,7 +77,8 @@ services:
       - ./apps/mobileExpo/.env
     volumes:
       - apk-volume:/shared
-    network_mode: "host"
+    networks:
+      - area-network
 
   client_web:
     build:
@@ -89,13 +93,17 @@ services:
       server:
         condition: service_started
     volumes:
-      - apk-volume:/shared 
-    network_mode: "bridge"
+      - apk-volume:/shared
+    networks:
+      - area-network
     expose:
       - 8081
     ports:
       - "8081:8081"
 
+networks:
+  area-network:
+    driver: bridge
+
 volumes:
   apk-volume:
-
