--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -77,6 +77,7 @@
       "!auth/**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageReporters": ["json", "html"],
     "testEnvironment": "node"
   }
 }
