--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "ts-node src/index.ts",
     "mocked-worker": "MONGODB_DB_NAME=dev_testing RMQ_QUEUE=queue_testing ts-node tests/funcWorkerTest.ts",
-    "example_worker": "ts-node src/example_worker.ts"
+    "example_worker": "ts-node src/example_worker.ts",
     "test": "jest --silent",
     "coverage": "jest --coverage --silent"
   },
