fix(mobileExpo): compilation things

--- a/apps/mobileExpo/Dockerfile
+++ b/apps/mobileExpo/Dockerfile
@@ -1,6 +1,6 @@
 FROM saschpe/android-ndk:35-jdk22.0.2_9-ndk27.0.12077973-cmake3.22.1
 
-ARG SKIP_MOBILE_COMPILATION=0
+ARG SKIP_MOBILE_COMPILATION
 
 RUN if [ "$SKIP_MOBILE_COMPILATION" = "0" ]; then \
     export DEBIAN_FRONTEND=noninteractive \
@@ -15,11 +15,11 @@ fi
 
 WORKDIR /app
 
-COPY . .
+COPY apps/mobileExpo .
 
 RUN chmod +x ./build.sh || echo "Warning: build.sh not found"
 
-RUN if [ "$SKIP_MOBILE_COMPILATION" = "0" ] && [ -f "./build.sh" ]; then \
+CMD if [ "$SKIP_MOBILE_COMPILATION" = "0" ] && [ -f "./build.sh" ]; then \
         sh ./build.sh $SKIP_MOBILE_COMPILATION; \
     else \
         echo "Skipping mobile compilation (SKIP_MOBILE_COMPILATION=$SKIP_MOBILE_COMPILATION)"; \
