hotfix(docker-compose): made limit of opened file bigger to ensure there is no error when building.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,6 +81,10 @@ services:
       - apk-volume:/shared
     networks:
       - area-network
+    ulimits:
+      nofile:
+        soft: 4096
+        hard: 4096
 
   client_web:
     build:
