--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -12,6 +12,9 @@ COPY apps/frontend apps/frontend
 COPY package.json .
 COPY tsconfig*.json .
 
+# Copier l'APK du volume partagé vers le dossier static pendant le build
+COPY --from=mobile-expo /shared/client.apk /app/apps/frontend/static/
+
 RUN npm i
 RUN npm install -g typescript
 RUN tsc -b apps/shared
@@ -19,19 +22,4 @@ RUN npm run front:build
 
 ENV HOST=0.0.0.0
 
-# Script pour démarrer le serveur
-COPY <<EOF /start.sh
-#!/bin/sh
-if [ -f "/shared/client.apk" ]; then
-    echo "Copying APK to static directory..."
-    cp /shared/client.apk /app/apps/frontend/static/
-    echo "APK copied successfully"
-    ls -l /app/apps/frontend/static/client.apk
-else
-    echo "Warning: No APK found in shared volume"
-fi
-npm run front:start
-EOF
-
-RUN chmod +x /start.sh
-CMD ["/start.sh"]
+CMD ["npm", "run", "front:start"]
