--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "mobile:test": "npm run test -w @area/mobileexpo",
     "mobile:cov": "npm run test:coverage -w @area/mobileexpo",
     "task-manager:start": "npm run start -w @area/manager",
+    "task-manager:func-tests": "npm run func-tests -w @area/manager",
+    "task-manager:mocking-setup": "npm run mocking-setup -w @area/manager",
     "worker:start": "npm run start -w @area/worker",
-    "worker:example_worker": "npm run example_worker -w @area/worker"
+    "worker:example_worker": "npm run example_worker -w @area/worker",
+    "worker:mocked-worker": "npm run func-tests -w @area/worker"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.3",
