fix(frontend): all fetches are now from the server

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -12,8 +12,27 @@ COPY apps/frontend apps/frontend
 COPY package.json .
 COPY tsconfig*.json .
 
-# Copier l'APK du volume partagé vers le dossier static pendant le build
-COPY --from=mobile-expo /shared/client.apk /app/apps/frontend/static/
+# Script d'attente et de démarrage
+COPY <<EOF /start.sh
+#!/bin/sh
+
+# Attendre que l'APK soit prêt
+while [ ! -f /shared/client.apk.ready ]; do
+    echo "Waiting for APK..."
+    sleep 2
+done
+
+# Copier l'APK
+echo "APK is ready, copying to static directory..."
+cp /shared/client.apk /app/apps/frontend/static/
+chmod 644 /app/apps/frontend/static/client.apk
+
+# Démarrer l'application
+echo "Starting frontend application..."
+exec npm run front:start
+EOF
+
+RUN chmod +x /start.sh
 
 RUN npm i
 RUN npm install -g typescript
@@ -22,4 +41,4 @@ RUN npm run front:build
 
 ENV HOST=0.0.0.0
 
-CMD ["npm", "run", "front:start"]
+CMD ["/start.sh"]
