--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,6 +66,7 @@ services:
     ports:
       - "8080:8080"
 
+
   client_mobile:
     build:
       dockerfile: ./apps/mobileExpo/Dockerfile
@@ -73,39 +74,34 @@ services:
         SKIP_MOBILE_COMPILATION: ${SKIP_MOBILE_COMPILATION:-0}
     image: mobile-expo
     container_name: mobile-expo
-    env_file:
-      - ./apps/mobileExpo/.env
-    environment:
-      SKIP_MOBILE_COMPILATION: ${SKIP_MOBILE_COMPILATION:-0}
     volumes:
       - apk-volume:/shared:rw
     networks:
       - area-network
-    ulimits:
-      nofile:
-        soft: 4096
-        hard: 4096
+    healthcheck:
+      test: [ "CMD-SHELL", "test -f /shared/build-complete" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   client_web:
     build:
       dockerfile: ./apps/frontend/Dockerfile
     image: frontend
     container_name: frontend
-    env_file:
-      - ./apps/frontend/.env
     depends_on:
       client_mobile:
-        condition: service_completed_successfully
+        condition: service_healthy
       server:
         condition: service_started
     volumes:
       - apk-volume:/shared:ro
     networks:
       - area-network
-    expose:
-      - 8081
     ports:
       - "8081:8081"
+
 
 networks:
   area-network:
