--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 
 EXPOSE 8081
 
-# Créer les répertoires nécessaires
+# Create necessary directories
 RUN mkdir -p /shared /app/apps/frontend/static
 RUN chmod 777 /shared /app/apps/frontend/static
 
@@ -12,32 +12,36 @@ COPY apps/frontend apps/frontend
 COPY package.json .
 COPY tsconfig*.json .
 
-# Script d'attente et de démarrage
+# Install dependencies first
+RUN npm i
+RUN npm install -g typescript
+
+# Compile shared typescript
+RUN tsc -b apps/shared
+
+# Modified startup script to handle APK first
 COPY <<EOF /start.sh
 #!/bin/sh
 
-# Attendre que l'APK soit prêt
+# Wait for APK and copy it first
 while [ ! -f /shared/client.apk.ready ]; do
     echo "Waiting for APK..."
     sleep 2
 done
 
-# Copier l'APK
 echo "APK is ready, copying to static directory..."
 cp /shared/client.apk /app/apps/frontend/static/
 chmod 644 /app/apps/frontend/static/client.apk
 
-# Démarrer l'application
+# Now build and start the application
+echo "Building frontend application..."
+npm run front:build
+
 echo "Starting frontend application..."
 exec npm run front:start
 EOF
 
 RUN chmod +x /start.sh
-
-RUN npm i
-RUN npm install -g typescript
-RUN tsc -b apps/shared
-RUN npm run front:build
 
 ENV HOST=0.0.0.0
 
