--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/entrypoint.ts",
     "example_worker": "ts-node src/example_worker.ts",
     "test": "jest --silent",
     "coverage": "jest --coverage --silent"
