hotfix(github-action): removed build and tried to fix VPS not running.

--- a/.github/workflows/push_to_mirror.yml
+++ b/.github/workflows/push_to_mirror.yml
@@ -151,7 +151,7 @@ jobs:
   push_to_mirror:
     name: Push to mirror
     if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: cleanup old checkout
