--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -23,4 +23,11 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
+
 LASTFM_API_KEY=
+
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URL=
+
+RIOT_API_TOKEN=
