--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,4 @@
 services:
-  # database:
-
   queue:
     build:
       context: ./apps/queue
@@ -19,6 +17,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - area-network
 
   manager:
     build:
@@ -31,7 +31,8 @@ services:
       queue:
         condition: service_healthy
     restart: always
-    network_mode: "host"      
+    networks:
+      - area-network
 
   worker:
     build:
@@ -43,7 +44,8 @@ services:
     depends_on:
       queue:
         condition: service_healthy
-    network_mode: "host"
+    networks:
+      - area-network
 
   server:
     build:
@@ -59,9 +61,11 @@ services:
         condition: service_started
       worker:
         condition: service_started
-    network_mode: "host"
+    networks:
+      - area-network
     ports:
       - "8080:8080"
+
 
   client_mobile:
     build:
@@ -70,32 +74,34 @@ services:
         SKIP_MOBILE_COMPILATION: ${SKIP_MOBILE_COMPILATION:-0}
     image: mobile-expo
     container_name: mobile-expo
-    env_file:
-      - ./apps/mobileExpo/.env
     volumes:
-      - apk-volume:/shared
-    network_mode: "host"
-
+      - ./shared/mobile:/shared
+    networks:
+      - area-network
+    healthcheck:
+      test: [ "CMD-SHELL", "test -f /shared/build-complete" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
   client_web:
     build:
       dockerfile: ./apps/frontend/Dockerfile
     image: frontend
     container_name: frontend
-    env_file:
-      - ./apps/frontend/.env
     depends_on:
       client_mobile:
-        condition: service_completed_successfully
+        condition: service_healthy
       server:
         condition: service_started
     volumes:
-      - apk-volume:/shared 
-    network_mode: "bridge"
-    expose:
-      - 8081
+      - ./shared/mobile:/shared:ro
+    networks:
+      - area-network
     ports:
       - "8081:8081"
 
-volumes:
-  apk-volume:
 
+networks:
+  area-network:
+    driver: bridge
