--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,6 @@ services:
     ports:
       - "8080:8080"
 
-
   client_mobile:
     build:
       dockerfile: ./apps/mobileExpo/Dockerfile
@@ -75,15 +74,10 @@ services:
     image: mobile-expo
     container_name: mobile-expo
     volumes:
-      - ./shared/mobile:/shared
+      - shared:/shared
     networks:
       - area-network
-    healthcheck:
-      test: [ "CMD-SHELL", "test -f /shared/build-complete" ]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+
   client_web:
     build:
       dockerfile: ./apps/frontend/Dockerfile
@@ -91,16 +85,18 @@ services:
     container_name: frontend
     depends_on:
       client_mobile:
-        condition: service_healthy
+        condition: service_started
       server:
         condition: service_started
     volumes:
-      - ./shared/mobile:/shared:ro
+      - shared:/shared
     networks:
       - area-network
     ports:
       - "8081:8081"
 
+volumes:
+  shared:
 
 networks:
   area-network:
